# fluent-rs

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile.internal.toml  Makefile.toml  README.md  deny.toml
fluent/: CHANGELOG.md  Cargo.toml  README.md
fluent-bundle/: CHANGELOG.md  Cargo.toml  README.md  custom_formatter.diff  de.diff
fluent-bundle/benches/: lib.rs  resolver.rs  resolver_iai.rs
fluent-bundle/examples/: README.md  custom_formatter.rs  custom_type.rs  external_arguments.rs  functions.rs  hello.rs  message_reference.rs  selector.rs  simple-app.rs  typesafe_messages.rs
fluent-bundle/src/: args.rs  builtins.rs  bundle.rs  concurrent.rs  entry.rs  errors.rs  icu_data_provider.rs  lib.rs  memoizer.rs  message.rs  resolve.rs  resource.rs  term.rs  types.rs
fluent-bundle/src/icu4x_data/: macros.rs  mod.rs
fluent-bundle/src/icu4x_data/macros/: decimal_symbols_v1.rs.data
fluent-bundle/src/resolver/: errors.rs  expression.rs  inline_expression.rs  mod.rs  pattern.rs  scope.rs
fluent-bundle/src/types/: mod.rs  number.rs  plural.rs
fluent-bundle/tests/: builtins.rs  bundle.rs  bundle_test.rs  compound.rs  constructor_test.rs  custom_types.rs  format.rs  format_message.rs  function.rs  functions_runtime_test.rs  functions_test.rs  optional_value.rs  primitives_test.rs  resolve_attribute_expression.rs  resolve_external_argument.rs  resolve_message_reference.rs  resolve_plural_rule.rs  resolve_select_expression.rs  resolve_value.rs  resolve_variant_expression.rs  resolver_fixtures.rs  resource_test.rs  select_expression_test.rs  terms-references-with-arguments.rs  types_test.rs  values_format_test.rs  values_ref_test.rs
fluent-bundle/tests/fixtures/: arguments.yaml  bomb.yaml  context.yaml  functions.yaml  isolating.yaml  macros.yaml  patterns.yaml  primitives.yaml  select_expression.yaml  values_ref.yaml
fluent-bundle/tests/helpers/: mod.rs
fluent-cli/: Cargo.toml
fluent-cli/src/: lib.rs  main.rs  resolver.rs
fluent-cli/tests/: fixture.ftl  test_main.rs
fluent-fallback/: CHANGELOG.md  Cargo.toml  README.md
fluent-fallback/examples/: simple-fallback.rs  simple.rs
fluent-fallback/src/: bundles.rs  cache.rs  env.rs  errors.rs  generator.rs  lib.rs  localization.rs  types.rs
fluent-fallback/src/pin_cell/: mod.rs  pin_mut.rs  pin_ref.rs
fluent-fallback/tests/: l10nregistry.rs  localization_test.rs
fluent-fallback/tests/resources/en-US/: test2.ftl
fluent-fallback/tests/resources/pl/: test.ftl  test2.ftl
fluent-pseudo/: CHANGELOG.md  Cargo.toml  README.md
fluent-pseudo/src/: lib.rs
fluent-resmgr/: CHANGELOG.md  Cargo.toml  README.md
fluent-resmgr/examples/: simple-resmgr.rs  simple.rs
fluent-resmgr/examples/resources/en-US/: errors.ftl
fluent-resmgr/examples/resources/pl/: errors.ftl
fluent-resmgr/src/: lib.rs  resource_manager.rs
fluent-resmgr/tests/: localization.rs  localization_test.rs
fluent-resmgr/tests/resources/en-US/: invalid.ftl  test.ftl
fluent-resmgr/tests/resources/pl/: test.ftl
fluent-syntax/: .gitattributes  CHANGELOG.md  Cargo.toml  README.md
fluent-syntax/benches/: lexer.rs  lib.rs  menubar.ftl  parser.rs  preferences.ftl  simple.ftl
fluent-syntax/examples/: slice.rs
fluent-syntax/src/: arc_str.rs  ast.rs  lib.rs  serializer.rs  unicode.rs  visit.rs
fluent-syntax/src/ast/: comment.rs  helper.rs  mod.rs
fluent-syntax/src/parser/: comment.rs  core.rs  errors.rs  expression.rs  ftlstream.rs  helper.rs  lexer.rs  mod.rs  parser.rs  pattern.rs  runtime.rs  slice.rs  stream.rs
fluent-syntax/src/parser/errors/: list.rs  mod.rs
fluent-syntax/src/parser2/: ast.rs  lexer.rs  mod.rs  parser.rs
fluent-syntax/tests/: errors.rs  fixtures.rs  junk.rs  lexer.rs  parser_fixtures.rs  serializer_fixtures.rs  stream.rs  unicode.rs
fluent-syntax/tests/ast/: helper.rs  mod.rs
fluent-syntax/tests/fixtures/: any_char.spans.json  astral.json  astral.spans.json  call_expressions.json  call_expressions.spans.json  callee_expressions.spans.json  comments.json  comments.spans.json  convert.js  cr.spans.json  crlf-issue213.ftl  crlf-issue213.json  crlf.ftl  crlf.json  crlf.spans.json  eof_comment.json  eof_comment.spans.json  eof_empty.json  eof_empty.spans.json  eof_id.json  eof_id.spans.json  eof_id_equals.json  eof_id_equals.spans.json  eof_junk.json  eof_junk.spans.json  eof_value.json  eof_value.spans.json  escaped_characters.json  escaped_characters.spans.json  junk.json  junk.spans.json  leading_dots.json  leading_dots.spans.json  literal_expressions.json  literal_expressions.spans.json  member_expressions.json  member_expressions.spans.json  messages.json  messages.spans.json  mixed_entries.json  (+30 more)
fluent-syntax/tests/helper/: mod.rs
fluent-testing/: CHANGELOG.md  Cargo.toml  README.md
fluent-testing/examples/: js.rs
fluent-testing/src/: files.rs  lib.rs
fluent-testing/src/scenarios/: browser.rs  empty_resource_all_locales.rs  empty_resource_one_locale.rs  mod.rs  preferences.rs  simple.rs  structs.rs
fluent/benches/: lib.rs  menubar.ftl
fluent/examples/: external_arguments.rs  functions.rs  hello.rs  message_reference.rs  selector.rs  simple-app.rs  simple.rs
fluent/src/: bundle.rs  context.rs  entry.rs  errors.rs  fmt.rs  lib.rs  resolve.rs  resource.rs  resource_manager.rs  types.rs
fluent/src/intl/: mod.rs
fluent/src/syntax/: ast.rs  ftlstream.rs  mod.rs  parser.rs
fluent/tests/: bundle.rs  context.rs  format.rs  format_message.rs  lib.rs  localization_test.rs  macro.rs  pseudo.rs  resolve_attribute_expression.rs  resolve_external_argument.rs  resolve_message_reference.rs  resolve_plural_rule.rs  resolve_select_expression.rs  resolve_value.rs  resolve_variant_expression.rs
fluent/tests/helpers/: mod.rs
fluent/tests/intl/: mod.rs
fluent/tests/syntax/: fixtures.rs  mod.rs  stream.rs
intl-memoizer/: CHANGELOG.md  Cargo.toml  README.md
intl-memoizer/benches/: single.rs
intl-memoizer/examples/: nf.rs  numberformat.rs  pluralrules.rs
intl-memoizer/src/: concurrent.rs  lang_memoizer.rs  lib.rs  memoizable.rs  memoizer.rs
intl-memoizer/tests/: single.rs
(+246 files in other folders)
