[workspace]
resolver = "2"
members = [
  "fluent-syntax",
  "fluent-bundle",
  "fluent-fallback",
  "fluent-resmgr",
  "fluent-pseudo",
  "fluent-testing",
  "fluent",
  "intl-memoizer",
]

exclude = ["fluent-cli"]

[workspace.dependencies]
criterion = "0.3"
fluent-langneg = "0.13"
futures = "0.3"
iai = "0.1"
intl_pluralrules = "7.0.1"
rustc-hash = "1"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = "1.0"
unic-langid = "0.9"

fluent-bundle = { version = "0.15.3", path = "fluent-bundle" }
fluent-fallback = { version = "0.7.1", path = "fluent-fallback" }
fluent-pseudo = { version = "0.3.2", path = "fluent-pseudo" }
fluent-syntax = { version = "0.11.1", path = "fluent-syntax" }
