[package]
name = "fluent-bundle"
description = """
A localization system designed to unleash the entire expressive power of
natural language translations.
"""
version = "0.15.2"
edition = "2021"
authors = [
    "Zibi Braniecki <gandalf@mozilla.com>",
    "Staś Małolepszy <stas@mozilla.com>"
]
homepage = "http://www.projectfluent.org"
license = "Apache-2.0/MIT"
repository = "https://github.com/projectfluent/fluent-rs"
readme = "README.md"
keywords = ["localization", "l10n", "i18n", "intl", "internationalization"]
categories = ["localization", "internationalization"]
include = [
	"src/**/*",
	"benches/*.rs",
	"Cargo.toml",
	"README.md",
	"LICENSE-APACHE",
	"LICENSE-MIT"
]

[dependencies]
fluent-langneg.workspace = true
fluent-syntax.workspace = true
rustc-hash.workspace = true
icu_locid.workspace = true
icu_plurals.workspace = true
icu_provider.workspace = true
fixed_decimal = { version = "0.5.5", features = ["ryu"] }
intl-memoizer = { path = "../intl-memoizer" }
self_cell = "0.10"
smallvec = "1"

[dev-dependencies]
criterion.workspace = true
iai.workspace = true
serde = { workspace = true, features = ["derive"]}
rand = "0.8"
serde_yaml = "0.8"

[features]
default = ["icu_provider/sync"]
sync = ["icu_provider/sync"]
all-benchmarks = []

[[bench]]
name = "resolver"
harness = false

[[bench]]
name = "resolver_iai"
harness = false
