[package]
name = "fluent-bundle"
description = """
A localization system designed to unleash the entire expressive power of
natural language translations.
"""
version = "0.15.3"
edition = "2021"
authors = [
  "Zibi Braniecki <zibi@unicode.org>",
  "Staś Małolepszy <stas@mozilla.com>",
]
homepage = "http://www.projectfluent.org"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/projectfluent/fluent-rs"
readme = "README.md"
keywords = ["localization", "l10n", "i18n", "intl", "internationalization"]
categories = ["localization", "internationalization"]
include = [
  "src/**/*",
  "benches/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]

[dependencies]
fluent-langneg.workspace = true
fluent-syntax.workspace = true
intl_pluralrules.workspace = true
rustc-hash.workspace = true
unic-langid.workspace = true
intl-memoizer = { version = "0.5.2", path = "../intl-memoizer" }
self_cell = "0.10"
smallvec = "1"

[dev-dependencies]
criterion.workspace = true
iai.workspace = true
serde = { workspace = true, features = ["derive"] }
unic-langid = { workspace = true, features = ["macros"] }
rand = "0.8"
serde_yaml = "0.8"

[features]
default = []
all-benchmarks = []

[[bench]]
name = "resolver"
harness = false

[[bench]]
name = "resolver_iai"
harness = false
