[package]
name = "fluent-cli"
description = """
A collection of command line interface programs
for Fluent Localization System.
"""
version = "0.0.1"
edition = "2021"
authors = [
    "Zibi Braniecki <zibi@unicode.org>",
    "Staś Małolepszy <stas@mozilla.com>"
]
homepage = "http://www.projectfluent.org"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/projectfluent/fluent-rs"
readme = "README.md"
keywords = ["localization", "l10n", "i18n", "intl", "internationalization"]
categories = ["localization", "internationalization"]

[[bin]]
name = "resolver-cli"
path = "src/resolver.rs"

[[bin]]
name = "parser-cli"
path = "src/main.rs"

[dependencies]
fluent-bundle.workspace = true
fluent-syntax.workspace = true
serde = { workspace = true, features = ["derive"]}
serde_json.workspace = true
annotate-snippets = { version = "0.6", features = ["color"] }
clap = "2.33"
