[package]
name = "fluent-fallback"
description = """
High-level abstraction model for managing localization resources
and runtime localization lifecycle.
"""
version = "0.7.1"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"

[dependencies]
fluent-bundle.workspace = true
futures.workspace = true
rustc-hash.workspace = true
unic-langid.workspace = true
async-trait = "0.1"
chunky-vec = "0.1"
once_cell = "1.9"
pin-cell = "0.2"

[dev-dependencies]
fluent-langneg.workspace = true
unic-langid = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
fluent-resmgr = { path = "../fluent-resmgr" }
