[package]
name = "fluent-pseudo"
description = """
Project Fluent is a localization system designed to unleash the entire
expressive power of natural language translations. This crate provides
a pseudolocalization and transformation API.
"""
version = "0.3.2"
edition.workspace = true
rust-version = "1.64.0"
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"
include = [
  "src/**/*",
  "benches/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT"
]

[dependencies]
regex = "1"
