[package]
name = "fluent-pseudo"
description = """
A pseudolocalization and transformation API for Project Fluent,
a localization system designed to unleash the entire expressive power of natural language translations.
"""
version = "0.3.2"
edition.workspace = true
rust-version = "1.64.0"
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"
include = [
  "src/**/*",
  "benches/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT"
]

[dependencies]
regex = "1.9"
once_cell = "1.20"
