[package]
name = "fluent-pseudo"
description = """
A pseudolocalization and transformation API for Project Fluent,
a localization system designed to unleash the entire expressive power of natural language translations.
"""
version = "0.3.3"
edition.workspace = true
rust-version = "1.65.0"
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"
include = [
  "src/**/*",
  "benches/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]

[dependencies]
once_cell.workspace = true
regex = "1.11"
