[package]
name = "fluent-syntax"
description = """
Parser/Serializer tools for Fluent Syntax.
"""
version = "0.11.1"
edition = "2021"
authors = [
    "Zibi Braniecki <zibi@unicode.org>",
    "Staś Małolepszy <stas@mozilla.com>"
]
homepage = "http://www.projectfluent.org"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/projectfluent/fluent-rs"
readme = "README.md"
keywords = ["localization", "l10n", "i18n", "intl", "internationalization"]
categories = ["localization", "internationalization"]
include = [
	"src/**/*",
	"benches/*.rs",
	"Cargo.toml",
	"README.md",
	"LICENSE-APACHE",
	"LICENSE-MIT"
]

[dependencies]
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
iai.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
glob = "0.3"

[features]
default = []
json = ["serde", "serde_json"]
all-benchmarks = []

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "parser_iai"
harness = false

[[bin]]
name = "parser"
path = "src/bin/parser.rs"

[[bin]]
name = "update_fixtures"
path = "src/bin/update_fixtures.rs"
required-features = ["json"]

[[test]]
name = "parser_fixtures"
path = "tests/parser_fixtures.rs"
required-features = ["json"]
