[package]
name = "fluent-testing"
description = """
A collection of mock scenarios for testing fluent-rs components.
"""
version = "0.0.3"
authors = [
    "Zibi Braniecki <zibi@braniecki.net>",
    "Erik Nordin <enordin@mozilla.com>"
]
edition = "2021"
homepage = "https://www.projectfluent.org"
license = "Apache-2.0/MIT"
repository = "https://github.com/projectfluent/fluent-rs"
readme = "README.md"
keywords = ["localization", "l10n", "i18n", "intl", "internationalization"]
categories = ["localization", "internationalization"]
include = [
	"src/**/*",
	"resources/**/*",
	"Cargo.toml",
	"README.md",
	"LICENSE-APACHE",
	"LICENSE-MIT"
]

[dependencies]
fluent-bundle.workspace = true
fluent-fallback.workspace = true
tokio = { workspace = true, optional = true, features = ["fs", "rt-multi-thread", "macros", "io-util"] }

[features]
default = ["sync"]
sync = []
async = ["tokio"]
