[package]
name = "fluent-testing"
description = """
A collection of mock scenarios for testing fluent-rs components.
"""
version = "0.0.4"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"
include = [
	"src/**/*",
	"resources/**/*",
	"Cargo.toml",
	"README.md",
	"LICENSE-APACHE",
	"LICENSE-MIT"
]

[dependencies]
fluent-bundle.workspace = true
fluent-fallback.workspace = true
tokio = { workspace = true, optional = true, features = ["fs", "rt-multi-thread", "macros", "io-util"] }

[features]
default = ["sync"]
sync = []
async = ["tokio"]
