[package]
name = "fluent"
description = """
A localization system designed to unleash the entire expressive power of
natural language translations.
"""
version = "0.16.1"
edition = "2021"
authors = [
    "Zibi Braniecki <zibi@unicode.org>",
    "Staś Małolepszy <stas@mozilla.com>"
]
homepage = "http://www.projectfluent.org"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/projectfluent/fluent-rs"
readme = "README.md"
keywords = ["localization", "l10n", "i18n", "intl", "internationalization"]
categories = ["localization", "internationalization"]
include = [
	"src/**/*",
	"benches/*.rs",
	"Cargo.toml",
	"README.md",
	"LICENSE-APACHE",
	"LICENSE-MIT"
]

[dependencies]
fluent-bundle.workspace = true
fluent-pseudo = { workspace = true, optional = true }
unic-langid.workspace = true
