[package]
name = "intl-memoizer"
description = """
A memoizer specifically tailored for storing lazy-initialized
intl formatters.
"""
version = "0.5.1"
edition = "2021"
authors = [
    "Zibi Braniecki <gandalf@mozilla.com>",
    "Manish Goregaokar <manishsmail@gmail.com>"
]
homepage = "http://www.projectfluent.org"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/projectfluent/fluent-rs"
readme = "README.md"
keywords = ["localization", "l10n", "i18n", "intl", "internationalization"]
categories = ["localization", "internationalization"]
include = [
	"src/**/*",
	"benches/*.rs",
	"Cargo.toml",
	"README.md",
	"LICENSE-APACHE",
	"LICENSE-MIT"
]

[dependencies]
unic-langid.workspace = true
type-map = "0.5"

[dev-dependencies]
intl_pluralrules.workspace = true
fluent-langneg.workspace = true
